tools/tests/errors/surf_exc_13.ki
# repeating Bytes by a huge count is guarded (raises, not OOM)
discard Bytes([1, 2]) * 100000000000
